--- a/Greedy/435.non-overlapping-intervals.md
+++ b/Greedy/435.non-overlapping-intervals.md
@@ -1,4 +1,4 @@
-# 无重叠区间（Non）Medium
+# 无重叠区间（Non-Overlapping Intervals）Medium
 ### [原题链接](https://leetcode-cn.com/problems/non-overlapping-intervals)（[Origin](https://leetcode.com/problems/non-overlapping-intervals)）
 ## 描述
 给定一个区间的集合，找到需要移除区间的最小数量，使剩余区间互不重叠。
