--- a/String/005.longest-palindromic-substring.md
+++ b/String/005.longest-palindromic-substring.md
@@ -6,7 +6,6 @@
 **示例 1：**
 ```
 输入: "babad"
-
 输出: "bab"
 注意: "aba"也是一个有效答案。
 ```
@@ -15,7 +14,6 @@
 **示例 2：**
 ```
 输入: "cbbd"
-
 输出: "bb"
 ```
 
@@ -25,25 +23,20 @@ Given a string s, find the longest palindromic substring in s. You may assume th
 **Example 1:**
 ```
 Input: "babad"
-
 Output: "bab"
-**Note:**
- "aba" is also a valid answer.
+Note: "aba" is also a valid answer.
 ```
-
 
 **Example 2:**
 ```
 Input: "cbbd"
-
 Output: "bb"
 ```
 
 
 
-## 最长回文子串
 ### 解法
-每个位置扩展回文串, 分别以当前位置为中心或当前和下一个位置为中心, 即考虑奇偶数. 每次保留最大长度和起始点.
+由于要找满足的字符串而非只是长度, 故遍历每个位置, 并扩展回文串, 分别以当前位置为中心或当前和下一个位置为中心, 即考虑奇偶数. 每次保留最大长度和起始点.
 ```c++
 class Solution {
 public:
