--- a/String/008.string-to-integer-atoi.md
+++ b/String/008.string-to-integer-atoi.md
@@ -13,7 +13,7 @@
 
 说明：
 
-假设我们的环境只能存储 32 位有符号整数，其数值范围是[&minus;231, 231&minus; 1]。如果数值超过可表示的范围，则返回 INT_MAX (231&minus; 1) 或INT_MIN (&minus;231) 。
+假设我们的环境只能存储 32 位有符号整数，其数值范围是[-231, 231- 1]。如果数值超过可表示的范围，则返回 INT_MAX (231- 1) 或INT_MIN (-231) 。
 
 **示例1:**
 ```
@@ -29,7 +29,7 @@
 
 输出: -42
 
-解释: 第一个非空白字符为 &#39;-&#39;, 它是一个负号。
+解释: 第一个非空白字符为 '-', 它是一个负号。
     我们尽可能将负号与后面所有连续出现的数字组合起来，最后得到 -42 。
 ```
 
@@ -40,7 +40,7 @@
 
 输出: 4193
 
-解释: 转换截止于数字 &#39;3&#39; ，因为它的下一个字符不为数字。
+解释: 转换截止于数字 '3' ，因为它的下一个字符不为数字。
 ```
 
 
@@ -50,7 +50,7 @@
 
 输出: 0
 
-解释: 第一个非空字符是 &#39;w&#39;, 但它不是数字或正、负号。
+解释: 第一个非空字符是 'w', 但它不是数字或正、负号。
      因此无法执行有效的转换。
 ```
 
@@ -61,7 +61,7 @@
 输出: -2147483648
 
 解释: 数字 "-91283472332" 超过 32 位有符号整数范围。 
-    因此返回 INT_MIN (&minus;231) 。
+    因此返回 INT_MIN (-231) 。
 ```
 
 ## Description
@@ -77,8 +77,8 @@ If no valid conversion could be performed, a zero value is returned.
 
 **Note:**
 
-Only the space character &#39; &#39; is considered as whitespace character.
-	Assume we are dealing with an environment which could only store integers within the 32-bit signed integer range: [&minus;231, 231&minus; 1]. If the numerical value is out of the range of representable values, INT_MAX (231&minus; 1) or INT_MIN (&minus;231) is returned.
+Only the space character ' ' is considered as whitespace character.
+	Assume we are dealing with an environment which could only store integers within the 32-bit signed integer range: [-231, 231- 1]. If the numerical value is out of the range of representable values, INT_MAX (231- 1) or INT_MIN (-231) is returned.
 
 
 **Example 1:**
@@ -95,7 +95,7 @@ Input: "   -42"
 
 Output: -42
 
-Explanation: The first non-whitespace character is &#39;-&#39;, which is the minus sign.
+Explanation: The first non-whitespace character is '-', which is the minus sign.
             Then take as many numerical digits as possible, which gets 42.
 ```
 
@@ -106,7 +106,7 @@ Input: "4193 with words"
 
 Output: 4193
 
-Explanation: Conversion stops at digit &#39;3&#39; as the next character is not a numerical digit.
+Explanation: Conversion stops at digit '3' as the next character is not a numerical digit.
 ```
 
 
@@ -116,7 +116,7 @@ Input: "words and 987"
 
 Output: 0
 
-Explanation: The first non-whitespace character is &#39;w&#39;, which is not a numerical 
+Explanation: The first non-whitespace character is 'w', which is not a numerical 
             digit or a +/- sign. Therefore no valid conversion could be performed.
 ```
 
@@ -127,7 +127,7 @@ Input: "-91283472332"
 Output: -2147483648
 
 Explanation: The number "-91283472332" is out of the range of a 32-bit signed integer.
-            Thefore INT_MIN (&minus;231) is returned.
+            Thefore INT_MIN (-231) is returned.
 ```
 
 
