--- a/Array/015.3sum.md
+++ b/Array/015.3sum.md
@@ -1,5 +1,9 @@
-# 三数之和（3Sum）*Medium*
-### [原题链接](https://leetcode-cn.com/problems/3sum)（[Origin](https://leetcode.com/problems/3sum)）
+# 三数之和（3Sum）
+### 标签: `Array`
+### 难度: ★★
+### 评分: ★★★★★
+### 原题: [中文](https://leetcode-cn.com/problems/3sum)/[英文](https://leetcode.com/problems/3sum)
+
 ## 描述
 给定一个包含 n 个整数的数组nums，判断nums中是否存在三个元素 a，b，c ，使得a + b + c = 0 ？找出所有满足条件且不重复的三元组。
 
