--- a/Array/015.3sum.md
+++ b/Array/015.3sum.md
@@ -1,8 +1,8 @@
 # 三数之和（3Sum）
 ## 概况
-**标签**：*`Array`*<br>
-**难度**：★★<br>
-**评分**：★★★★★<br>
+**标签**：*`Array`*
+**难度**：★★
+**评分**：★★★★★
 **原题**：[中文](https://leetcode-cn.com/problems/3sum) / [英文](https://leetcode.com/problems/3sum)
 ## 描述
 
