--- a/BinarySearch/153.find-minimum-in-rotated-sorted-array.md
+++ b/BinarySearch/153.find-minimum-in-rotated-sorted-array.md
@@ -6,35 +6,47 @@
 **原题**：[中文](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array) / [英文](https://leetcode.com/problems/find-minimum-in-rotated-sorted-array)
 ## 描述
 假设按照升序排序的数组在预先未知的某个点上进行了旋转。
+
 ( 例如，数组[0,1,2,4,5,6,7]  可能变为[4,5,6,7,0,1,2])。
+
 请找出其中最小的元素。
+
 你可以假设数组中不存在重复元素。
+
 **示例 1:**
 ```
 输入: [3,4,5,1,2]
 输出: 1
 ```
+
 **示例 2:**
 ```
 输入: [4,5,6,7,0,1,2]
 输出: 0
 ```
+
 ## Description
 Suppose an array sorted in ascending order is rotated at some pivot unknown to you beforehand.
+
 (i.e., [0,1,2,4,5,6,7]might become [4,5,6,7,0,1,2]).
+
 Find the minimum element.
+
 You may assume no duplicate exists in the array.
+
 **Example 1:**
 ```
 Input: [3,4,5,1,2] 
 Output: 1
 ```
+
 **Example 2:**
 ```
 Input: [4,5,6,7,0,1,2]
 Output: 0
 ```
-#### 二分查找(O(logn))
+
+### 解法
 由于是升序数组的截断, 故如果截断位置是N \ [0,n-1] (相当于未截断), 则last > first; 否则last < first;
 每次缩小区间要保留mid作比较(与二分找已知值不同)
 先判断是否rotate, 再判断rotate了的情况.
@@ -44,30 +56,16 @@ class Solution {
 public:
     int findMin(vector<int>& nums) {
         int n = nums.size();
-        if (!n) return 0;
+        if (!n) return -1;
         
-        int low = 0, high = n-1;
-        if (nums[low] < nums[high]) return nums[low];
-        
+        int low = 0, high = n - 1;
         while (low < high) {
-            int mid = low + (high - low) / 2;
-            if (nums[mid] > nums[high]) low = mid + 1;
-            else high = mid;
+            int mid = (low + high) / 2;
+            if (nums[mid] < nums[high]) high = mid;
+            else low = mid + 1;
         }
         
         return nums[low];
     }
 };
-```
-#### 顺序查找(O(n))
-返回比前一个值小的数.
-```c++
-int findMin(vector<int> &nums) {
-	for (int i = 0; i < int(nums.size()) - 1; i++) {
-		if (nums[i] > nums[i+1]) {
-			return nums[i+1];
-		}
-	}
-	return nums[0];
-}
 ```
