--- a/Stack_Queue/032.longest-valid-parentheses.md
+++ b/Stack_Queue/032.longest-valid-parentheses.md
@@ -5,32 +5,38 @@
 **评分**：★★★★★<br>
 **原题**：[中文](https://leetcode-cn.com/problems/longest-valid-parentheses) / [英文](https://leetcode.com/problems/longest-valid-parentheses)
 ## 描述
-给定一个只包含 &#39;(&#39;和 &#39;)&#39;的字符串，找出最长的包含有效括号的子串的长度。
+给定一个只包含 '('和 ')'的字符串，找出最长的包含有效括号的子串的长度。
+
 **示例1:**
 ```
 输入: "(()"
 输出: 2
 解释: 最长有效括号子串为 "()"
 ```
+
 **示例 2:**
 ```
 输入: ")()())"
 输出: 4
 解释: 最长有效括号子串为 "()()"
 ```
+
 ## Description
-Given a string containing just the characters &#39;(&#39; and &#39;)&#39;, find the length of the longest valid (well-formed) parentheses substring.
+Given a string containing just the characters '(' and ')', find the length of the longest valid (well-formed) parentheses substring.
+
 **Example 1:**
 ```
 Input: "(()"
 Output: 2
 Explanation: The longest valid parentheses substring is "()"
 ```
+
 **Example 2:**
 ```
 Input: ")()())"
 Output: 4
 Explanation: The longest valid parentheses substring is "()()"
+
 ```
 ## 最长的合格括号串长度
 ### 解法
@@ -39,30 +45,24 @@ Explanation: The longest valid parentheses substring is "()()"
 class Solution {
 public:
     int longestValidParentheses(string s) {
-        int n = s.length();
+        stack<int> st;
+        st.push(-1);
         
-        stack<int> par;
-        par.push(-1);
+        int n = s.length();
         for (int i = 0; i < n; i++) {
-            if (s[i] == '(') {
-                par.push(i);
-            }
+            if (s[i] == '(') st.push(i);
             else {
-                if (!par.empty() && s[par.top()] == '(') {
-                    par.pop();
-                }
-                else {
-                    par.push(i);
-                }
+                if (!st.empty() && s[st.top()] == '(') st.pop();
+                else st.push(i);
             }
         }
-        par.push(n);
+        st.push(n);
         
-        int high = n, low = 0;
         int maxlen = 0;
-        while (!par.empty()) {
-            low = par.top();
-            par.pop();
+        int low = 0, high = n;
+        while (!st.empty()) {
+            low = st.top();
+            st.pop();
             maxlen = max(maxlen, high - low - 1);
             high = low;
         }
