--- a/Stack_Queue/150.evaluate-reverse-polish-notation.md
+++ b/Stack_Queue/150.evaluate-reverse-polish-notation.md
@@ -4,24 +4,31 @@
 **难度**：★★<br>
 **评分**：★★★<br>
 **原题**：[中文](https://leetcode-cn.com/problems/evaluate-reverse-polish-notation) / [英文](https://leetcode.com/problems/evaluate-reverse-polish-notation)
+
 ## 描述
 根据逆波兰表示法，求表达式的值。
+
 有效的运算符包括+,-,*,/。每个运算对象可以是整数，也可以是另一个逆波兰表达式。
+
 说明：
+
 	整数除法只保留整数部分。
 	给定逆波兰表达式总是有效的。换句话说，表达式总会得出有效数值且不存在除数为 0 的情况。
+
 **示例1：**
 ```
 输入: ["2", "1", "+", "3", "*"]
 输出: 9
 解释: ((2 + 1) * 3) = 9
 ```
+
 **示例2：**
 ```
 输入: ["4", "13", "5", "/", "+"]
 输出: 6
 解释: (4 + (13 / 5)) = 6
 ```
+
 **示例3：**
 ```
 输入: ["10", "6", "9", "3", "+", "-11", "*", "/", "*", "17", "+", "5", "+"]
@@ -35,24 +42,33 @@
 = 17 + 5
 = 22
 ```
+
 ## Description
 Evaluate the value of an arithmetic expression in Reverse Polish Notation.
-Valid operators are +, -, *, /. Each operand may be an integer or another expression.
+
+Valid operators are +, -, *, /. 
+
+Each operand may be an integer or another expression.
+
 **Note:**
+
 	Division between two integers should truncate toward zero.
 	The given RPN expression is always valid. That means the expression would always evaluate to a result and there won&#39;tbe anydivideby zero operation.
+
 **Example 1:**
 ```
 Input: ["2", "1", "+", "3", "*"]
 Output: 9
 Explanation: ((2 + 1) * 3) = 9
 ```
+
 **Example 2:**
 ```
 Input: ["4", "13", "5", "/", "+"]
 Output: 6
 Explanation: (4 + (13 / 5)) = 6
 ```
+
 **Example 3:**
 ```
 Input: ["10", "6", "9", "3", "+", "-11", "*", "/", "*", "17", "+", "5", "+"]
@@ -66,65 +82,35 @@ Explanation:
 = 17 + 5
 = 22
 ```
-## 逆波兰表达式四则运算
+
 ### 解法
 每次遇到数则压入栈, 遇到符号则从栈中弹出两个数计算后压入栈, 最后返回栈顶元素 (检查各种边界).
 ```c++
 class Solution {
 public:
     int evalRPN(vector<string>& tokens) {
-        int n = tokens.size();
-        if (!n) {
-            return 0;
-        }
+        unordered_map<string, function<int (int, int)> > ops = {
+            { "+", [](int a, int b) { return a + b; } },
+            { "-", [](int a, int b) { return a - b; } },
+            { "*", [](int a, int b) { return a * b; } },
+            { "/", [](int a, int b) { return a / b; } }
+        };
         
-        set<string> operations = {"+", "-", "*", "/"};
-        
-        stack<int> buffer;
-        
-        for (int i = 0; i < n; i++) {
-            string curr = tokens[i];
-            if (operations.find(curr) != operations.end()) {
-                if (buffer.size() < 2) {
-                    return 0;
-                }
-                
-                int num2 = buffer.top();
-                buffer.pop();
-                int num1 = buffer.top();
-                buffer.pop();
-                
-                int num;
-                if (curr == "+") {
-                    num = num1 + num2;
-                }
-                else if (curr == "-") {
-                    num = num1 - num2;
-                }
-                else if (curr == "*") {
-                    num = num1 * num2;
-                }
-                else if (curr == "/") {
-                    num = num1 / num2;
-                }
-                
-                buffer.push(num);
+        stack<int> s;
+        for (string &t : tokens) {
+            if (!ops.count(t)) {
+                s.push(stoi(t));
             }
-            
             else {
-                int num;
-                try {
-                    num = stoi(tokens[i]);
-                }
-                catch (exception &e) {
-                    return 0;
-                }
-                buffer.push(num);
+                int num1 = s.top();
+                s.pop();
+                int num2 = s.top();
+                s.pop();
+                s.push(ops[t](num2, num1));
             }
         }
         
-        return tokens.size() == 1 || 
-            (operations.find(tokens.back()) != operations.end() && buffer.size() == 1) ? buffer.top() : 0;
+        return s.top();
     }
 };
 ```
