--- a/HashTable/560.subarray-sum-equals-k.md
+++ b/HashTable/560.subarray-sum-equals-k.md
@@ -6,8 +6,9 @@
 **原题**：[中文](https://leetcode-cn.com/problems/subarray-sum-equals-k) / [英文](https://leetcode.com/problems/subarray-sum-equals-k)
 ## 描述
 给定一个整数数组和一个整数k，你需要找到该数组中和为k的连续的子数组的个数。
-```
+
 示例 1 :
+```
 输入:nums = [1,1,1], k = 2
 输出: 2 , [1,1] 与 [1,1] 为两种不同的情况。
 说明 :
@@ -16,34 +17,30 @@
 ```
 ## Description
 Given an array of integers and an integer k, you need to find the total number of continuous subarrays whose sum equals to k.
+
 **Example 1:**
 ```
 Input:nums = [1,1,1], k = 2
 Output: 2
 ```
 **Note:**
-The length of the array is in range [1, 20,000].
-The range of numbers in the array is [-1000, 1000] and the range of the integer k is [-1e7, 1e7].
-## 数组连续子序列等于给定和的个数.
-### 解法:
+
+    The length of the array is in range [1, 20,000].
+    The range of numbers in the array is [-1000, 1000] and the range of the integer k is [-1e7, 1e7].
+
+### 解法
 哈希存前缀和计数, 每次查看sum-k是否在哈希表中. 因sum(i,j)==k ==> sum(0,j)-sum(0,i-1)==k, i.e. preSum(j) - k = preSum(i-1)
 ```c++
 class Solution {
 public:
     int subarraySum(vector<int>& nums, int k) {
-        int n = nums.size();
-        if (!n) return 0;
-        
-        unordered_map<int, int> preSum;
+        unordered_map<int,int> preSum;
         preSum[0] = 1;
         
-        int res = 0;
-        int sum = 0;
+        int res = 0, sum = 0;
         for (int num : nums) {
             sum += num;
-            if (preSum.find(sum - k) != preSum.end()) {
-                res += preSum[sum - k];
-            }
+            res += preSum[sum - k];
             preSum[sum]++;
         }
         
