modify code; array

--- a/Array/014.longest-common-prefix.md
+++ b/Array/014.longest-common-prefix.md
@@ -57,34 +57,25 @@ class Solution {
 public:
     string longestCommonPrefix(vector<string>& strs) {
         string res;
-        
         int n = strs.size();
-        if (!n) {
-            return res;
-        }
+        if (!n) return res;
         
-        vector<int> pos(n);
-        int common = 0;
-        
-        while (true) {
-            if (common == strs[0].length()) {
-                break;
-            }
-            char c = strs[0][common];
-            
-            bool exitFlag = false;
+        bool finish = false;
+        for (int j = 0; j < strs[0].length(); j++) {
+            finish = false;
             for (int i = 1; i < n; i++) {
-                if (common == strs[i].length() || strs[i][common] != c) {
-                    exitFlag = true;
+                if (j >= strs[i].length() || strs[i][j] != strs[0][j]) {
+                    finish = true;
                     break;
                 }
             }
-            if (exitFlag) break;
-            
-            common++;
+            if (finish) {
+                res = strs[0].substr(0, j);
+                break;
+            }
         }
         
-        return common > 0 ? strs[0].substr(0, common) : "";
+        return finish ? res : strs[0];
     }
 };
 ```
