--- a/Array/015.3sum.md
+++ b/Array/015.3sum.md
@@ -38,43 +38,35 @@ A solution set is:
 ```
 
 ### 解法
-先排序, 之后建立三个指针, 0, 1, n-1. 收缩后面两个, 记录满足的结果, 外层遍历第一个. 注意跳过重复的结果.
+- 先排序
+- 外层循环遍历a[0]~a[n-2], 内层循环从左右往里扫描, 初始时为a[i+1]和a[n-1].
+- 跳过重复结果.
 
 ```c++
 class Solution {
 public:
     vector<vector<int>> threeSum(vector<int>& nums) {
         vector<vector<int> > res;
+        
         int n = nums.size();
-        if (n < 3) {
-            return res;
-        }
+        if (n < 3) return res;
         
         sort(nums.begin(), nums.end());
         
-        for (int i = 0; i < n-2; i++) {
-            if (i > 0 && nums[i] == nums[i-1]) {
-                continue;
-            }
+        for (int i = 0; i < n - 2; i++) {
+            if (i > 0 && nums[i] == nums[i-1]) continue;
             
-            int j = i+1, k = n-1;
+            int j = i + 1, k = n - 1;
             while (j < k) {
                 int s = nums[i] + nums[j] + nums[k];
-                if (s == 0) {
-                    vector<int> one = {nums[i], nums[j], nums[k]};
-                    res.push_back(one);
-                    
-                    j++; k--;
-                    while (nums[j] == nums[j-1]) j++;
-                    while (nums[k] == nums[k+1]) k--;
-                }
-                
-                else if (s > 0) {
-                    k--;
-                }
+                if (s > 0) k--;
+                else if (s < 0) j++;
                 else {
-                    j++;
-                }                
+                    res.push_back(vector<int>{nums[i], nums[j], nums[k]});
+                    j++; k--;
+                    while (j < k && nums[j] == nums[j-1]) j++;
+                    while (k > j && nums[k] == nums[k+1]) k--;
+                }
             }
         }
         
