--- a/Array/026.remove-duplicates-from-sorted-array.md
+++ b/Array/026.remove-duplicates-from-sorted-array.md
@@ -77,22 +77,16 @@ Clarification:
 
 
 ### 解法
-一个指针存, 一个指针依次检查, 可暂存当前值
+判断当前位置元素是否与新位置元素相等.
 ```c++
 class Solution {
 public:
     int removeDuplicates(vector<int>& nums) {
-        int n = nums.size();
-        int pos = 0;
-        int curr = 0;
-        while (curr < n) {
-            int val = nums[curr];
-            nums[pos++] = val;
-            while (curr < n && nums[curr] == val) {
-                curr++;
-            }
+        int pos = -1;
+        for (int i = 0; i < nums.size(); i++) {
+            if (pos == -1 || nums[i] != nums[pos]) nums[++pos] = nums[i];
         }
-        return pos;
+        return pos+1;
     }
 };
 ```
