--- a/Array/031.next-permutation.md
+++ b/Array/031.next-permutation.md
@@ -43,14 +43,12 @@ class Solution {
 public:
     void nextPermutation(vector<int>& nums) {
         int n = nums.size();
-        if (!n) {
-            return;
-        }
+        if (!n) return;
         
         int split = -1;
-        for (int i = n-1; i >= 1; i--) {
-            if (nums[i-1] < nums[i]) {
-                split = i-1;
+        for (int i = n - 2; i >= 0; i--) {
+            if (nums[i] < nums[i+1]) {
+                split = i;
                 break;
             }
         }
@@ -60,12 +58,13 @@ public:
             return;
         }
         
-        for (int i = n-1; i > split; i--) {
+        for (int i = n - 1; i > split; i--) {
             if (nums[i] > nums[split]) {
                 swap(nums[i], nums[split]);
                 break;
             }
         }
+        
         sort(nums.begin() + split + 1, nums.end());
     }
 };
