--- a/Array/054.spiral-matrix.md
+++ b/Array/054.spiral-matrix.md
@@ -63,13 +63,10 @@ class Solution {
 public:
     vector<int> spiralOrder(vector<vector<int>>& matrix) {
         vector<int> res;
+        if (matrix.empty()) return res;
+        int m = matrix.size(), n = matrix[0].size();
         
-        int m = matrix.size();
-        if (!m) return res;
-        int n = matrix[0].size();
-        if (!n) return res;
-        
-        int top = 0, bottom = m - 1, left = 0, right = n - 1;
+        int left = 0, right = n - 1, top = 0, bottom = m - 1;
         while (left <= right && top <= bottom) {
             if (top > bottom) break;
             for (int j = left; j <= right; j++) {
@@ -84,7 +81,7 @@ public:
             right--;
             
             if (top > bottom) break;
-            for (int j = right; j >= left ; j--) {
+            for (int j = right; j >= left; j--) {
                 res.push_back(matrix[bottom][j]);
             }
             bottom--;
@@ -97,7 +94,6 @@ public:
         }
         
         return res;
-        
     }
 };
 ```
