--- a/Array/056.merge-intervals.md
+++ b/Array/056.merge-intervals.md
@@ -57,32 +57,26 @@ public:
     vector<Interval> merge(vector<Interval>& intervals) {
         vector<Interval> res;
         int n = intervals.size();
-        if (!n) {
-            return res;
-        }
+        if (!n) return res;
         
-        sort(intervals.begin(), intervals.end(), cmp);
+        sort(intervals.begin(), intervals.end(), [](const Interval &a, const Interval &b){
+            return a.start < b.start;
+        });
         
-        int lastStart = intervals[0].start;
-        int lastEnd = intervals[0].end;
+        Interval prev = intervals[0];
         for (Interval interval : intervals) {
-            if (interval.start <= lastEnd) {
-                lastEnd = max(lastEnd, interval.end);
+            if (interval.start <= prev.end) {
+                prev.end = max(prev.end, interval.end);
             }
             else {
-                res.push_back(Interval(lastStart, lastEnd));
-                lastStart = interval.start;
-                lastEnd = interval.end;
+                res.emplace_back(prev);
+                prev = interval;
             }
         }
         
-        res.push_back(Interval(lastStart, lastEnd));
+        res.emplace_back(prev);
         
         return res;
-    }
-    
-    static int cmp(Interval interval1, Interval interval2) {
-        return interval1.start < interval2.start;
     }
 };
 ```
