--- a/Array/057.insert-interval.md
+++ b/Array/057.insert-interval.md
@@ -46,15 +46,6 @@ Explanation: Because the new interval [4,8] overlaps with [3,5],[6,7],[8,10].
 类似前一道题, 依次按照是否相交合并区间, 只不过这部分放在中间, 还要将前面和后面不相交的区间放进结果.
 即依次将前面的区间放入结果; 找到第一个相交的区间依次合并, 直到不相交时把这个区间放入结果; 依次把后面的区间放入结果.
 ```
-/**
- * Definition for an interval.
- * struct Interval {
- *     int start;
- *     int end;
- *     Interval() : start(0), end(0) {}
- *     Interval(int s, int e) : start(s), end(e) {}
- * };
- */
 class Solution {
 public:
     vector<Interval> insert(vector<Interval>& intervals, Interval newInterval) {
@@ -67,7 +58,7 @@ public:
                 res.emplace_back(intervals[i]);
             }
             else {
-                newInterval.start = min(intervals[i].start, newInterval.start);
+                newInterval.start = min(newInterval.start, intervals[i].start);
                 break;
             }
         }
@@ -76,13 +67,11 @@ public:
             if (intervals[i].start <= newInterval.end) {
                 newInterval.end = max(newInterval.end, intervals[i].end);
             }
-            else {
-                break;
-            }
+            else break;
         }
         res.emplace_back(newInterval);
         
-        for (i; i < n; i++) {
+        for (; i < n; i++) {
             res.emplace_back(intervals[i]);
         }
         
