--- a/Array/074.search-a-2d-matrix.md
+++ b/Array/074.search-a-2d-matrix.md
@@ -68,28 +68,20 @@ Output: false
 ### 解法
 初始位置位于右上角，则比当前大的在下方，小的在左方，移动方向确定了。
 ```c++
-bool searchMatrix(vector<vector<int>>& matrix, int target) {
-    int m = matrix.size();
-    if (m == 0) {
-      return false;
+class Solution {
+public:
+    bool searchMatrix(vector<vector<int>>& matrix, int target) {
+        if (matrix.empty()) return false;
+        int m = matrix.size(), n = matrix[0].size();
+        
+        int i = 0, j = n - 1;
+        while (i < m && j >= 0) {
+            if (matrix[i][j] == target) return true;
+            if (matrix[i][j] > target) j--;
+            else i++;
+        }
+        
+        return false;
     }
-    int n = matrix[0].size();
-    if (n == 0) {
-      return false;
-    }
-    int i = 0, j = n-1;
-    while (i <= m-1 && j >= 0) {
-      int curr = matrix[i][j];
-      if (curr == target) {
-        return true;
-      }
-      if (target > curr) {
-        i++;
-      }
-      else {
-        j--;
-      }
-    }
-    return false;
-}
+};
 ```
