--- a/Array/075.sort-colors.md
+++ b/Array/075.sort-colors.md
@@ -53,16 +53,15 @@ class Solution {
 public:
     void sortColors(vector<int>& nums) {
         int n = nums.size();
-        int zero_upper = 0, two_lower = n - 1;
-        int pos = zero_upper;
-        while (pos <= two_lower) {
-            while (nums[pos] == 2 && pos < two_lower) {
-                swap(nums[pos], nums[two_lower--]);
+        int upper_0 = 0, lower_2 = n - 1;
+        int pos = upper_0;
+        while (pos <= lower_2) {
+            while (nums[pos] == 2 && pos < lower_2) {
+                swap(nums[pos], nums[lower_2--]);
             }
-            while (nums[pos] == 0 && pos > zero_upper) {
-                swap(nums[pos], nums[zero_upper++]);
+            while (nums[pos] == 0 && pos > upper_0) {
+                swap(nums[pos], nums[upper_0++]);
             }
-            
             pos++;
         }
     }
