--- a/Array/080.remove-duplicates-from-sorted-array-ii.md
+++ b/Array/080.remove-duplicates-from-sorted-array-ii.md
@@ -71,22 +71,18 @@ Clarification:
 
 
 ### 解法
-依次扫描, 增加一个计数.
+同上一题, 再增加一个判断当前数是否与新位置的前一个相等.
 ```c++
 class Solution {
 public:
     int removeDuplicates(vector<int>& nums) {
-        int cnt = 0;
-        int pos = 0;
-        for (int num : nums) {
-            if (pos == 0 || nums[pos-1] != num || cnt < 2) {
-                nums[pos] = num;
-                if (pos == 0 || nums[pos-1] == num) cnt++;
-                else cnt = 1;
-                pos++;
+        int pos = -1;
+        for (int i = 0; i < nums.size(); i++) {
+            if (pos <= 0 || nums[i] != nums[pos] || nums[i] != nums[pos-1]) {
+                nums[++pos] = nums[i];
             }
         }
-        return pos;
+        return pos + 1;
     }
 };
 ```
