--- a/Array/088.merge-sorted-array.md
+++ b/Array/088.merge-sorted-array.md
@@ -39,23 +39,18 @@ Output:[1,2,2,3,5,6]
 
 
 ### 解法
-归并排序
+归并排序. nums1剩余时不用处理, nums2剩余时放到1.
 ```c++
 class Solution {
 public:
     void merge(vector<int>& nums1, int m, vector<int>& nums2, int n) {
-        int i = m-1, j = n-1, k = m+n-1;
-        while (i >= 0 && j >= 0) {
-            if (nums1[i] > nums2[j]) {
-                nums1[k--] = nums1[i--];
-            }
-            else {
-                nums1[k--] = nums2[j--];
-            }
+        int l = m + n - 1;
+        m--; n--;
+        while (m >= 0 && n >= 0) {
+            if (nums1[m] > nums2[n]) nums1[l--] = nums1[m--];
+            else nums1[l--] = nums2[n--];
         }
-        while (j >= 0) {
-            nums1[k--] = nums2[j--];
-        }
+        while (n >= 0) nums1[l--] = nums2[n--];
     }
 };
 ```
