--- a/Array/179.largest-number.md
+++ b/Array/179.largest-number.md
@@ -65,23 +65,19 @@ Output: "9534330"
 class Solution {
 public:
     string largestNumber(vector<int>& nums) {
-        vector<string> numsStr;
-        for (int num : nums) {
-            numsStr.push_back(to_string(num));
-        }
-        sort(numsStr.begin(), numsStr.end(), cmp);
-        if (numsStr[0] == "0") return "0";
+        vector<string> strs;
+        for (int num : nums) strs.push_back(to_string(num));
+        
+        sort(strs.begin(), strs.end(), [](const string &s1, const string &s2) {
+            return s1 + s2 > s2 + s1;
+        });
+        
+        if (strs[0] == "0") return "0";
         
         string res = "";
-        for (string num : numsStr) {
-            res += num;
-        }
+        for (string s : strs) res += s;
         
         return res;
-    }
-    
-    static int cmp(const string &s1, const string &s2) {
-        return s1 + s2 > s2 + s1;
     }
 };
 ```
