--- a/Array/209.minimum-size-subarray-sum.md
+++ b/Array/209.minimum-size-subarray-sum.md
@@ -38,20 +38,20 @@ class Solution {
 public:
     int minSubArrayLen(int s, vector<int>& nums) {
         int n = nums.size();
-        int start = 0, end = 0;
-        int sum = 0;
-        int minLen = n + 1;
+        
+        int start = 0, end = 0, sum = 0;
+        int minlen = INT_MAX;
+        
         while (end < n) {
             sum += nums[end];
             while (sum >= s) {
-                minLen = min(minLen, end - start + 1);
-                sum -= nums[start];
-                start++;
+                minlen = min(minlen, end - start + 1);
+                sum -= nums[start++];
             }
             end++;
         }
         
-        return minLen < n+1 ? minLen : 0;
+        return minlen <= n ? minlen : 0;
     }
 };
 ```
