--- a/Array/215.kth-largest-element-in-an-array.md
+++ b/Array/215.kth-largest-element-in-an-array.md
@@ -90,7 +90,7 @@ You may assume k is always valid, 1 &le; k &le; array&#39;s length.
 
 
 ### 解法1
-先用最小堆找top k, 再找top k个数中最小的.
+先用最小堆找最大的k个数, 再返回堆顶(因为堆顶即为k个数中最小的).
 
 时间O(nlogk), 空间O(k).
 
@@ -100,9 +100,7 @@ public:
     int findKthLargest(vector<int>& nums, int k) {
         priority_queue<int, vector<int>, greater<int> > heap;
         for (int num : nums) {
-            if (heap.size() < k) {
-                heap.push(num);
-            }
+            if (heap.size() < k) heap.push(num);
             else {
                 if (num > heap.top()) {
                     heap.pop();
@@ -110,14 +108,7 @@ public:
                 }
             }
         }
-        
-        int res = INT_MAX;
-        while (!heap.empty()) {
-            res = min(res, heap.top());
-            heap.pop();
-        }
-        
-        return res;
+        return heap.top();
     }
 };
 ```
