--- a/Array/378.kth-smallest-element-in-a-sorted-matrix.md
+++ b/Array/378.kth-smallest-element-in-a-sorted-matrix.md
@@ -97,7 +97,7 @@ public:
         visit[0][0] = true;
         
         for (int l = 0; l < k-1; l++) {
-            pair<pair<int,int>, int> cur = q.top();
+            auto cur = q.top();
             int i = cur.first.first, j = cur.first.second, val = cur.second;
             q.pop();
             
@@ -140,7 +140,7 @@ public:
         }
         
         for (int l = 0; l < k-1; l++) {
-            pair<pair<int,int>, int> cur = q.top();
+            auto cur = q.top();
             q.pop();
             int i = cur.first.first, j = cur.first.second, val = cur.second;
             if (i + 1 < m) q.push(make_pair(make_pair(i+1,j), matrix[i+1][j]));
