--- a/Array/011.container-with-most-water.md
+++ b/Array/011.container-with-most-water.md
@@ -40,21 +40,16 @@ Output: 49
 class Solution {
 public:
     int maxArea(vector<int>& height) {
-        int n = height.size();
-        if (!n) {
-            return 0;
-        }
+        int res = 0, low = 0, high = int(height.size()) - 1;
         
-        int low = 0, high = n - 1;
-        int area = 0;
         while (low < high) {
             int h = min(height[low], height[high]);
-            area = max(area, h * (high - low));
+            res = max(res, h * (high - low));
             while (low < high && height[low] <= h) low++;
             while (low < high && height[high] <= h) high--;
         }
         
-        return area;
+        return res;
     }
 };
 ```
