--- a/Array/016.3sum-closest.md
+++ b/Array/016.3sum-closest.md
@@ -71,3 +71,35 @@ int threeSumClosest(vector<int> &nums, int target) {
 	return ans;
 }
 ```
+
+也可不跳过, 简洁写法.
+```c++
+class Solution {
+public:
+    int threeSumClosest(vector<int>& nums, int target) {
+        int n = nums.size();
+        sort(nums.begin(), nums.end());
+        
+        int minDiff = INT_MAX, res;
+        for (int i = 0; i < n - 2; i++) {
+            if (i > 0 && nums[i] == nums[i-1]) continue;
+            int j = i + 1, k = n - 1;
+            while (j < k) {
+                int sum = nums[i] + nums[j] + nums[k];
+                if (sum == target) return target;
+                
+                int diff = abs(sum - target);
+                if (diff < minDiff) {
+                    minDiff = diff;
+                    res = sum;
+                }
+                
+                if (sum > target) k--;
+                else j++;
+            }
+        }
+        
+        return res;
+    }
+};
+```
