--- a/Array/018.4sum.md
+++ b/Array/018.4sum.md
@@ -44,39 +44,38 @@ A solution set is:
 ### 解法
 时间复杂度O(n^3)。同3sum
 ```c++
-vector<vector<int> > fourSum(vector<int> &nums, int target) {
-	sort(nums.begin(), nums.end());
-	
-	int n = nums.size();
-	vector<vector<int> > res;
-	for (int i = 0; i < n - 3; i++) {
-		if (i != 0 && nums[i] == nums[i-1]) {
-			continue;
-		}
-		for (int j = i + 1; j < n - 2; j++) {
-			int l = j + 1, h = n - 1;
-			if (j != i + 1 && nums[j] == nums[j-1]) {
-				continue;
-			}
-			while (l < h) {
-				int sum = nums[i] + nums[j] + nums[l] + nums[h];
-				if (sum == target) {
-					vector<int> item = {nums[i], nums[j], nums[l], nums[h]};
-					res.push_back(item);
-					while (l < h && nums[l] == nums[l+1]) l++;
-					while (l < h && nums[h] == nums[h-1]) h--;
-					l++; h--;
-				}
-				
-				else if (sum < target) {
-					l++;
-				}
-				else {
-					h--;
-				}
-			}
-		}
-	}
-	return res;
-}
+class Solution {
+public:
+    vector<vector<int>> fourSum(vector<int>& nums, int target) {
+        vector<vector<int> > res;
+        
+        int n = nums.size();
+        if (n < 4) return res;
+        
+        sort(nums.begin(), nums.end());
+        
+        for (int i = 0; i < n - 3; i++) {
+            if (i > 0 && nums[i] == nums[i-1]) continue;
+            for (int j = i + 1; j < n - 2; j++) {
+                if (j > i + 1 && nums[j] == nums[j-1]) continue;
+                
+                int k = j + 1, l = n - 1;
+                while (k < l) {
+                    int s = nums[i] + nums[j] + nums[k] + nums[l];
+                    if (s > target) l--;
+                    else if (s < target) k++;
+                    else {
+                        res.push_back(vector<int> {nums[i], nums[j], nums[k], nums[l]});
+                        k++; l--;
+                        while (k < l && nums[k] == nums[k-1]) k++;
+                        while (l > k && nums[l] == nums[l+1]) l--;
+                    }
+                }
+                
+            }
+        }
+        
+        return res;
+    }
+};
 ```
