--- a/Array/027.remove-element.md
+++ b/Array/027.remove-element.md
@@ -89,18 +89,10 @@ for (int i = 0; i < len; i++) {
 class Solution {
 public:
     int removeElement(vector<int>& nums, int val) {
-        int n = nums.size();
-        int pos = 0, curr = 0;
-        while (true) {
-            while (curr < n && nums[curr] == val) {
-                curr++;
-            }
-            if (curr == n) {
-                break;
-            }
-            nums[pos++] = nums[curr++];
+        int pos = 0;
+        for (int i = 0; i < nums.size(); i++) {
+            if (nums[i] != val) nums[pos++] = nums[i];
         }
-        
         return pos;
     }
 };
