--- a/Array/041.first-missing-positive.md
+++ b/Array/041.first-missing-positive.md
@@ -63,14 +63,12 @@ class Solution {
 public:
     int firstMissingPositive(vector<int>& nums) {
         int n = nums.size();
-        if (!n) {
-            return 1;
-        }
+        if (!n) return 1;
         
         for (int i = 0; i < n; i++) {
             while (nums[i] > 0 && nums[i] <= n && nums[i] != nums[nums[i] - 1]) {
                 swap(nums[i], nums[nums[i] - 1]);
-            }    
+            }
         }
         
         for (int i = 0; i < n; i++) {
@@ -79,7 +77,7 @@ public:
             }
         }
         
-        return n+1;
+        return n + 1;
     }
 };
 ```
