--- a/Array/048.rotate-image.md
+++ b/Array/048.rotate-image.md
@@ -98,16 +98,17 @@ rotate the input matrix in-place such that it becomes:
 class Solution {
 public:
     void rotate(vector<vector<int>>& matrix) {
-        int n = matrix.size();
+        if (matrix.empty()) return;
+        int m = matrix.size(), n = matrix[0].size();
         
-        for (int i = 0; i < n; i++) {
-            for (int j = 0; j < i; j++) {
+        for (int i = 0; i < m; i++) {
+            for (int j = i; j < n; j++) {
                 swap(matrix[i][j], matrix[j][i]);
             }
         }
         
-        for (int i = 0; i < n; i++) {
-            for (int j = 0; j < n/2; j++) {
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n / 2; j++) {
                 swap(matrix[i][j], matrix[i][n-j-1]);
             }
         }
