--- a/Array/059.spiral-matrix-ii.md
+++ b/Array/059.spiral-matrix-ii.md
@@ -39,27 +39,33 @@ Output:
 class Solution {
 public:
     vector<vector<int>> generateMatrix(int n) {
-        vector<int> line(n, 0);
-        vector<vector<int> > res(n, line);
-        int left = 0, right = n-1, top = 0, bottom = n-1;
-        
-        int num = 1;
+        vector<vector<int> > res(n, vector<int>(n));
+        int cur = 1;
+        int top = 0, bottom = n - 1, left = 0, right = n - 1;
         while (left <= right && top <= bottom) {
             if (top > bottom) break;
-            for (int j = left; j <= right; j++) res[top][j] = num++;
+            for (int j = left; j <= right; j++) {
+                res[top][j] = cur++;
+            }
             top++;
             
             if (left > right) break;
-            for (int i = top; i <= bottom; i++) res[i][right] = num++;
+            for (int i = top; i <= bottom; i++) {
+                res[i][right] = cur++;
+            }
             right--;
             
             if (top > bottom) break;
-            for (int j = right; j >= left; j--) res[bottom][j] = num++;
+            for (int j = right; j >= left; j--) {
+                res[bottom][j] = cur++;
+            }
             bottom--;
             
             if (left > right) break;
-            for (int i = bottom; i >= top; i--) res[i][left] = num++;
-            left++;            
+            for (int i = bottom; i >= top; i--) {
+                res[i][left] = cur++;
+            }
+            left++;
         }
         
         return res;
