--- a/Array/073.set-matrix-zeroes.md
+++ b/Array/073.set-matrix-zeroes.md
@@ -98,16 +98,13 @@ Follow up:
 class Solution {
 public:
     void setZeroes(vector<vector<int>>& matrix) {
-        int m = matrix.size();
-        if (!m) return;
-        int n = matrix[0].size();
-        if (!n) return;
+        if (matrix.empty()) return;
+        int m = matrix.size(), n = matrix[0].size();
         
         int col0 = 1;
         for (int i = 0; i < m; i++) {
-            if (matrix[i][0] == 0) {
-                col0 = 0;
-            }
+            if (matrix[i][0] == 0) col0 = 0;
+            
             for (int j = 1; j < n; j++) {
                 if (matrix[i][j] == 0) {
                     matrix[i][0] = 0;
@@ -116,12 +113,13 @@ public:
             }
         }
         
-        for (int i = m-1; i >= 0; i--) {
-            for (int j = n-1; j > 0; j--) {
+        for (int i = m - 1; i >= 0; i--) {
+            for (int j = n - 1; j >= 1; j--) {
                 if (matrix[i][0] == 0 || matrix[0][j] == 0) {
                     matrix[i][j] = 0;
                 }
             }
+            
             if (col0 == 0) {
                 matrix[i][0] = 0;
             }
