--- a/Array/240.search-a-2d-matrix-ii.md
+++ b/Array/240.search-a-2d-matrix-ii.md
@@ -41,29 +41,26 @@ Consider the following matrix:
   [10, 13, 14, 17, 24],
   [18, 21, 23, 26, 30]
 ]
-Giventarget=5, returntrue.
-Giventarget=20, returnfalse.
+Given target=5, return true.
+Given target=20, return false.
 ```
 
 ### 解法
-每行最后一个数不再大于下一行第一个数.
-解法: 增加每次往右走到小于target的最大数.
+在上一题基础上, 增加每次往右走到小于target的最大数.
 ```c++
 class Solution {
 public:
     bool searchMatrix(vector<vector<int>>& matrix, int target) {
-        int m = matrix.size();
-        if (!m) return false;
-        int n = matrix[0].size();
-        if (!n) return false;
+        if (matrix.empty()) return false;
+        int m = matrix.size(), n = matrix[0].size();
         
         int i = 0, j = n - 1;
         while (i < m && j >= 0) {
-            if (target == matrix[i][j]) return true;
-            if (target < matrix[i][j]) j--;
+            if (matrix[i][j] == target) return true;
+            if (matrix[i][j] > target) j--;
             else {
-                while (j < n-1 && target >= matrix[i][j+1]) j++;
-                if (target == matrix[i][j]) return true;
+                while (j+1 < n && matrix[i][j+1] < target) j++;
+                if (matrix[i][j] == target) return true;
                 i++;
             }
         }
