modify code; hash

--- a/HashTable/149.max-points-on-a-line.md
+++ b/HashTable/149.max-points-on-a-line.md
@@ -87,45 +87,42 @@ class Solution {
 public:
     int maxPoints(vector<Point>& points) {
         int n = points.size();
-        if (n <= 2) {
-            return n; 
-        }
+        int res = 0;
         
-        int globalMaxCount = 0;
         for (int i = 0; i < n; i++) {
-            map<int, map<int, int> > count;
-            int maxCount = 0;
-            int overlap = 0;
-            
             Point pi = points[i];
-            for (int j = i+1; j < n; j++) {
+            
+            unordered_map<int, unordered_map<int, int> > hash;
+            int maxcount = 0, overlap = 0;
+            
+            for (int j = i + 1; j < n; j++) {
                 Point pj = points[j];
                 
                 int dx = pi.x - pj.x;
                 int dy = pi.y - pj.y;
-                if (!dx && !dy) {
+                if (dx == 0 && dy == 0) {
                     overlap++;
                     continue;
                 }
-                
+                    
                 int gcd = getGCD(dx, dy);
                 if (gcd) {
                     dx /= gcd;
                     dy /= gcd;
                 }
                 
-                count[dx][dy]++;
-                maxCount = max(maxCount, count[dx][dy]);
+                hash[dx][dy]++;
+                maxcount = max(maxcount, hash[dx][dy]);
             }
-            globalMaxCount = max(globalMaxCount, maxCount + overlap + 1);
+            res = max(res, maxcount + overlap + 1);
         }
         
-        return globalMaxCount;
+        return res;
     }
     
     int getGCD(int x, int y) {
-        if (!y) return x;
-        return getGCD(y, x % y);        
+        if (y == 0) return x;
+        return getGCD(y, x % y);
     }
 };
 ```
