--- a/HashTable/217.contains-duplicate.md
+++ b/HashTable/217.contains-duplicate.md
@@ -59,9 +59,7 @@ public:
     bool containsDuplicate(vector<int>& nums) {
         unordered_set<int> hash;
         for (int num : nums) {
-            if (hash.find(num) != hash.end()) {
-                return true;
-            }
+            if (hash.count(num)) return true;
             hash.insert(num);
         }
         return false;
