--- a/HashTable/219.contains-duplicate-ii.md
+++ b/HashTable/219.contains-duplicate-ii.md
@@ -53,11 +53,9 @@ Output: false
 class Solution {
 public:
     bool containsNearbyDuplicate(vector<int>& nums, int k) {
-        unordered_map<int, int> hash;
+        unordered_map<int,int> hash;
         for (int i = 0; i < nums.size(); i++) {
-            if (hash.find(nums[i]) != hash.end() && abs(hash[nums[i]] - i) <= k) {
-                return true;                
-            }
+            if (hash.count(nums[i]) && abs(i - hash[nums[i]]) <= k) return true;
             hash[nums[i]] = i;
         }
         return false;
