--- a/HashTable/290.word-pattern.md
+++ b/HashTable/290.word-pattern.md
@@ -76,16 +76,19 @@ You may assume pattern contains only lowercase letters, and str contains lowerca
 class Solution {
 public:
     bool wordPattern(string pattern, string str) {
+        unordered_map<char, int> index_p;
+        unordered_map<string, int> index_s;
+        
         stringstream sin(str);
         string word;
-        unordered_map<string, int> indexs;
-        unordered_map<char, int> indexp;
+        
         int i;
         for (i = 0; sin >> word; i++) {
-            if (indexs[word] != indexp[pattern[i]]) return false;
-            indexs[word] = indexp[pattern[i]] = i+1;
+            if (i >= pattern.length() || index_p[pattern[i]] != index_s[word]) return false;
+            index_p[pattern[i]] = index_s[word] = i + 1;
         }
-        return i == pattern.size();;
+        
+        return i == pattern.size();
     }
 };
 ```
