--- a/HashTable/347.top-k-frequent-elements.md
+++ b/HashTable/347.top-k-frequent-elements.md
@@ -51,27 +51,22 @@ Output: [1]
 class Solution {
 public:
     vector<int> topKFrequent(vector<int>& nums, int k) {
-        unordered_map<int,int> hash;
         int n = nums.size();
-        for (int num : nums) {
-            hash[num]++;
-        }
+        unordered_map<int,int> freq;
+        for (int num : nums) freq[num]++;
         
         vector<int> bucket(n+1, 0);
-        for (auto it : hash) {
-            bucket[it.second]++;
-        }
+        for (auto it : freq) bucket[it.second]++;
         
         int low = n, count = 0;
-        for (; low >= 0 && count < k; low--) {
+        for (; low >= 0; low--) {
             count += bucket[low];
+            if (count > k) break;
         }
         
         vector<int> res;
-        for (auto it : hash) {
-            if (it.second > low) {
-                res.push_back(it.first);
-            }
+        for (auto it : freq) {
+            if (it.second > low) res.push_back(it.first);
         }
         
         return res;
