--- a/HashTable/454.4sum-ii.md
+++ b/HashTable/454.4sum-ii.md
@@ -49,17 +49,17 @@ The two tuples are:
 class Solution {
 public:
     int fourSumCount(vector<int>& A, vector<int>& B, vector<int>& C, vector<int>& D) {
-        unordered_map<int, int> count;
+        unordered_map<int, int> hash;
         for (int a : A) {
             for (int b : B) {
-                count[a+b]++;
+                hash[a+b]++;
             }
         }
         
         int res = 0;
         for (int c : C) {
             for (int d : D) {
-                res += count[-(c+d)];
+                res += hash[-(c+d)];
             }
         }
         
