--- a/HashTable/525.contiguous-array.md
+++ b/HashTable/525.contiguous-array.md
@@ -50,19 +50,23 @@ Explanation: [0, 1] (or [1, 0]) is a longest contiguous subarray with equal numb
 class Solution {
 public:
     int findMaxLength(vector<int>& nums) {
-        for (int i = 0; i < nums.size(); i++) {
-            if (!nums[i]) nums[i] = -1;
+        int n = nums.size();
+        for (int i = 0; i < n; i++) {
+            if (nums[i] == 0) nums[i] = -1;
         }
         
         unordered_map<int,int> preSum;
         preSum[0] = -1;
+        
         int sum = 0, maxlen = 0;
-        for (int i = 0; i < nums.size(); i++) {
+        for (int i = 0; i < n; i++) {
             sum += nums[i];
-            if (preSum.find(sum) != preSum.end()) {
+            if (preSum.count(sum)) {
                 maxlen = max(maxlen, i - preSum[sum]);
             }
-            else preSum[sum] = i;
+            else {
+                preSum[sum] = i;
+            }
         }
         
         return maxlen;
