--- a/HashTable/001.two-sum.md
+++ b/HashTable/001.two-sum.md
@@ -32,12 +32,12 @@ return [0, 1].
 class Solution {
 public:
     vector<int> twoSum(vector<int>& nums, int target) {
-        unordered_map<int,int> prev;
+        unordered_map<int, int> hash;
         for (int i = 0; i < nums.size(); i++) {
-            if (prev.find(nums[i]) != prev.end()) {
-                return vector<int>{prev[nums[i]], i};
+            if (hash.count(nums[i])) {
+                return vector<int>({hash[nums[i]], i});
             }
-            prev[target - nums[i]] = i;
+            hash[target - nums[i]] = i;
         }
         return vector<int> {};
     }
