--- a/HashTable/220.contains-duplicate-iii.md
+++ b/HashTable/220.contains-duplicate-iii.md
@@ -58,7 +58,7 @@ public:
     bool containsNearbyAlmostDuplicate(vector<int>& nums, int k, int t) {
         multiset<long> hash;
         for (int i = 0; i < nums.size(); i++) {
-            multiset<long>::iterator it = hash.lower_bound(long(nums[i]) - long(t));
+            auto it = hash.lower_bound(long(nums[i]) - long(t));
             if (it != hash.end() && *it <= long(nums[i]) + long(t)) {
                 return true;
             }
