--- a/HashTable/350.intersection-of-two-arrays-ii.md
+++ b/HashTable/350.intersection-of-two-arrays-ii.md
@@ -62,10 +62,8 @@ Follow up:
 class Solution {
 public:
     vector<int> intersect(vector<int>& nums1, vector<int>& nums2) {
-        unordered_map<int, int> count;
-        for (int num : nums1) {
-            count[num]++;
-        }
+        unordered_map<int,int> count;
+        for (int num : nums1) count[num]++;
         
         vector<int> res;
         for (int num : nums2) {
