--- a/HashTable/554.brick-wall.md
+++ b/HashTable/554.brick-wall.md
@@ -65,22 +65,21 @@ Explanation:
 class Solution {
 public:
     int leastBricks(vector<vector<int>>& wall) {
-        map<int, int> segments;
-        int preSum;
-        for (vector<int> line : wall) {
-            preSum = 0;
-            for (int i = 0; i < int(line.size())-1; i++) {
+        map<int,int> segments;
+        for (vector<int> &line : wall) {
+            int preSum = 0;
+            for (int i = 0; i < int(line.size()) - 1; i++) {
                 preSum += line[i];
                 segments[preSum]++;
             }
         }
         
-        auto maxCount = max_element(segments.begin(), segments.end(), 
-            [](const pair<int,int> &p1, const pair<int,int> &p2) {
-                return p1.second < p2.second;
-            });
+        auto maxn = max_element(segments.begin(), segments.end(),
+            [](const pair<int,int> &a, const pair<int,int> &b) {
+            return a.second < b.second;
+        });
         
-        return wall.size() - maxCount->second;
+        return wall.size() - maxn->second;
     }
 };
 ```
