--- a/HashTable/560.subarray-sum-equals-k.md
+++ b/HashTable/560.subarray-sum-equals-k.md
@@ -37,14 +37,14 @@ public:
     int subarraySum(vector<int>& nums, int k) {
         unordered_map<int,int> preSum;
         preSum[0] = 1;
+        int sum = 0;
         
-        int res = 0, sum = 0;
+        int res = 0;
         for (int num : nums) {
             sum += num;
             res += preSum[sum - k];
             preSum[sum]++;
         }
-        
         return res;
     }
 };
