--- a/HashTable/706.design-hashmap.md
+++ b/HashTable/706.design-hashmap.md
@@ -72,9 +72,10 @@ public:
         mymap.resize(N);
     }
     
-    list<pair<int, int> >::iterator find(int key) {
-        auto it = mymap[key%N].begin();
-        for (; it != mymap[key%N].end(); ++it) {
+    list<pair<int,int> >::iterator find(int key) {
+        int hashed_key = key % N;
+        auto it = mymap[hashed_key].begin();
+        for (; it != mymap[hashed_key].end(); ++it) {
             if (it->first == key) break;
         }
         return it;
@@ -83,32 +84,32 @@ public:
     /** value will always be non-negative. */
     void put(int key, int value) {
         auto it = find(key);
-        if (it != mymap[key % N].end()) {
-            it->second = value;
-        }
-        else {
-            mymap[key % N].emplace_back(key, value);
-        }
+        int hashed_key = key % N;
+        if (it != mymap[hashed_key].end()) it->second = value;
+        else mymap[hashed_key].emplace_back(key, value);
+        
     }
     
     /** Returns the value to which the specified key is mapped, or -1 if this map contains no mapping for the key */
     int get(int key) {
         auto it = find(key);
-        return it != mymap[key%N].end() ? it->second : -1;
+        return it != mymap[key % N].end() ? it->second : -1;
     }
     
     /** Removes the mapping of the specified value key if this map contains a mapping for the key */
     void remove(int key) {
         auto it = find(key);
-        if (it != mymap[key % N].end()) {
-            mymap[key % N].erase(it);
+        int hashed_key = key % N;
+        if (it != mymap[hashed_key].end()) {
+            mymap[hashed_key].erase(it);
         }
     }
     
 private:
     const int N = 20011;
-    vector<list<pair<int, int> > > mymap;
+    vector<list<pair<int,int> > > mymap;
 };
+
 /**
  * Your MyHashMap object will be instantiated and called as such:
  * MyHashMap obj = new MyHashMap();
@@ -117,4 +118,7 @@ private:
  * obj.remove(key);
  */
 ```
+
+
+
 ### 解法2: 开放寻址法
