modify code; binary

--- a/BinarySearch/034.find-first-and-last-position-of-element-in-sorted-array.md
+++ b/BinarySearch/034.find-first-and-last-position-of-element-in-sorted-array.md
@@ -51,45 +51,37 @@ Output: [-1,-1]
 class Solution {
 public:
     vector<int> searchRange(vector<int>& nums, int target) {
-        int low = lower_bound(nums, target);
-        int high = upper_bound(nums, target);
-        return vector<int>({low, high});
+        return vector<int>({lower_bound(nums, target), upper_bound(nums, target)});
     }
     
     int lower_bound(vector<int> &nums, int target) {
         int n = nums.size();
-        if (!n) return -1;
         int low = 0, high = n - 1;
         while (low < high) {
-            int mid = low + (high - low) / 2;
-            if (nums[mid] > target) high = mid - 1;
-            else if (nums[mid] < target) low = mid + 1;
+            int mid = (low + high) / 2;
+            if (target > nums[mid]) low = mid + 1;
+            else if (target < nums[mid]) high = mid - 1;
             else {
-                if (mid == 0 || nums[mid-1] != target) {
-                    return mid;
-                }
+                if (mid == 0 || nums[mid-1] != target) return mid;
                 high = mid - 1;
             }
         }
-        return nums[low] == target ? low : -1;
+        return !nums.empty() && nums[low] == target ? low : -1;
     }
     
     int upper_bound(vector<int> &nums, int target) {
         int n = nums.size();
-        if (!n) return -1;
         int low = 0, high = n - 1;
         while (low < high) {
-            int mid = low + (high - low) / 2;
-            if (nums[mid] > target) high = mid - 1;
-            else if (nums[mid] < target) low = mid + 1;
+            int mid = (low + high) / 2;
+            if (target > nums[mid]) low = mid + 1;
+            else if (target < nums[mid]) high = mid - 1;
             else {
-                if (mid == n-1 || nums[mid+1] != target) {
-                    return mid;
-                }
+                if (mid == n - 1 || nums[mid+1] != target) return mid;
                 low = mid + 1;
             }
         }
-        return nums[high] == target ? high : -1;
+        return !nums.empty() && nums[high] == target ? high : -1;
     }
 };
 ```
