--- a/BinarySearch/035.search-insert-position.md
+++ b/BinarySearch/035.search-insert-position.md
@@ -65,7 +65,7 @@ Output: 0
 
 
 ### 解法
-即找到第一个大于等于给定数的数的位置. 二分, 注意收缩情况:
+即找到第一个大于等于给定数的数的位置(lower_bound). 二分, 注意收缩情况:
 - 小于时往右收
 - 大于时判断是否往左收: 前一个数小于则可以直接返回, 否则往左收
 ```c++
@@ -98,6 +98,27 @@ public:
         }
         
         return nums[low] >= target ? low : low + 1;
+    }
+};
+```
+
+简洁写法: nums[mid]属于右边不属于左边.
+```c++
+class Solution {
+public:
+    int searchInsert(vector<int>& nums, int target) {
+        int n = nums.size();
+        if (!n || target < nums[0]) return 0;
+        if (target > nums[n-1]) return n;
+        
+        int low = 0, high = n - 1;
+        while (low < high) {
+            int mid = (low + high) / 2;
+            if (nums[mid] == target) return mid;
+            if (nums[mid] < target) low = mid + 1;
+            else high = mid;
+        }
+        return low;
     }
 };
 ```
