--- a/BinarySearch/287.find-the-duplicate-number.md
+++ b/BinarySearch/287.find-the-duplicate-number.md
@@ -55,21 +55,14 @@ Note:
 class Solution {
 public:
     int findDuplicate(vector<int>& nums) {
-        int n = int(nums.size()) - 1;
-        int low = 1, high = n;
+        int low = 1, high = int(nums.size()) - 1;
         while (low < high) {
             int mid = (low + high) / 2;
-            int cnt = 0;
-            for (int num : nums) {
-                if (num >= low && num <= mid) {
-                    cnt++;
-                }
-            }
-            
-            if (cnt > mid - low + 1) high = mid;
+            int count = 0;
+            for (int num : nums) count += num >= low && num <= mid;
+            if (count > mid - low + 1) high = mid;
             else low = mid + 1;
         }
-        
         return low;
     }
 };
