--- a/BinarySearch/704.binary-search.md
+++ b/BinarySearch/704.binary-search.md
@@ -90,10 +90,7 @@ Explanation: 2 does not exist in nums so return -1
 class Solution {
 public:
     int search(vector<int>& nums, int target) {
-        int n = nums.size();
-        if (!n) return -1;
-        
-        int low = 0, high = n - 1;
+        int low = 0, high = int(nums.size()) - 1;
         while (low < high) {
             int mid = (low + high) / 2;
             if (nums[mid] == target) return mid;
