--- a/BinarySearch/033.search-in-rotated-sorted-array.md
+++ b/BinarySearch/033.search-in-rotated-sorted-array.md
@@ -65,27 +65,21 @@ Output: -1
 class Solution {
 public:
     int search(vector<int>& nums, int target) {
-        int n = nums.size();
-        if (!n) return -1;
-        
-        int low = 0, high = n - 1;
+        int low = 0, high = int(nums.size()) - 1;
         while (low < high) {
             int mid = (low + high) / 2;
             if (nums[mid] == target) return mid;
-            if (nums[low] == target) return low;
-            if (nums[high] == target) return high;
             
-            if (nums[mid] > nums[low]) {
-                if (target < nums[mid] && target > nums[low]) high = mid - 1;
+            if (nums[mid] >= nums[low]) {
+                if (target >= nums[low] && target < nums[mid]) high = mid - 1;
                 else low = mid + 1;
             }
             else {
-                if (target > nums[mid] && target < nums[high]) low = mid + 1;
+                if (target > nums[mid] && target <= nums[high]) low = mid + 1;
                 else high = mid - 1;
             }
         }
-        
-        return nums[low] == target ? low : -1;
+        return !nums.empty() && nums[low] == target ? low : -1;
     }
 };
 ```
