--- a/BinarySearch/081.search-in-rotated-sorted-array-ii.md
+++ b/BinarySearch/081.search-in-rotated-sorted-array-ii.md
@@ -59,31 +59,27 @@ Follow up:
 class Solution {
 public:
     bool search(vector<int>& nums, int target) {
-        int n = nums.size();
-        if (!n) return false;
-        
-        int low = 0, high = n - 1;
+        int low = 0, high = int(nums.size()) - 1;
         while (low < high) {
             int mid = (low + high) / 2;
-            if (nums[mid] == target || nums[low] == target || nums[high] == target) {
-                return true;   
-            }
+            if (nums[mid] == target) return true;
             
             if (nums[mid] == nums[low] && nums[mid] == nums[high]) {
                 low++;
                 high--;
             }
+            
             else if (nums[mid] >= nums[low]) {
-                if (target > nums[low] && target < nums[mid]) high = mid - 1;
+                if (target >= nums[low] && target < nums[mid]) high = mid - 1;
                 else low = mid + 1;
             }
             else {
-                if (target > nums[mid] && target < nums[high]) low = mid + 1;
+                if (target > nums[mid] && target <= nums[high]) low = mid + 1;
                 else high = mid - 1;
             }
         }
         
-        return nums[low] == target;
+        return !nums.empty() && nums[low] == target;
     }
 };
 ```
