--- a/BinarySearch/153.find-minimum-in-rotated-sorted-array.md
+++ b/BinarySearch/153.find-minimum-in-rotated-sorted-array.md
@@ -55,16 +55,12 @@ Output: 0
 class Solution {
 public:
     int findMin(vector<int>& nums) {
-        int n = nums.size();
-        if (!n) return -1;
-        
-        int low = 0, high = n - 1;
+        int low = 0, high = int(nums.size()) - 1;
         while (low < high) {
             int mid = (low + high) / 2;
-            if (nums[mid] < nums[high]) high = mid;
-            else low = mid + 1;
+            if (nums[mid] > nums[high]) low = mid + 1;
+            else high = mid;
         }
-        
         return nums[low];
     }
 };
