--- a/BinarySearch/154.find-minimum-in-rotated-sorted-array-ii.md
+++ b/BinarySearch/154.find-minimum-in-rotated-sorted-array-ii.md
@@ -65,20 +65,16 @@ Output: 0
 class Solution {
 public:
     int findMin(vector<int>& nums) {
-        int n = nums.size();
-        if (!n) return -1;
-        
-        int low = 0, high = n-1;
+        int low = 0, high = int(nums.size()) - 1;
         while (low < high) {
             int mid = (low + high) / 2;
-            if (nums[mid] < nums[high]) high = mid;
-            else if (nums[mid] > nums[high]) low = mid + 1;
+            if (nums[mid] > nums[high]) low = mid + 1;
+            else if (nums[mid] < nums[high]) high = mid;
             else {
                 if (nums[mid] > nums[low]) high = mid - 1;
                 else low++;
             }
         }
-        
         return nums[low];
     }
 };
