--- a/BinarySearch/162.find-peak-element.md
+++ b/BinarySearch/162.find-peak-element.md
@@ -66,18 +66,13 @@ class Solution {
 public:
     int findPeakElement(vector<int>& nums) {
         int n = nums.size();
-        if (!n) return 0;
-        
-        int low = 0, high = n-1;
+        int low = 0, high = n - 1;
         while (low < high) {
-            int mid = low + (high - low) / 2;
-            if ((mid == 0 || nums[mid] > nums[mid-1]) && (mid == n-1 || nums[mid] > nums[mid+1])) {
-                return mid;
-            }
+            int mid = (low + high) / 2;
+            if ((mid == 0 || nums[mid] > nums[mid-1]) && (mid == n-1 || nums[mid] > nums[mid+1])) return mid;
             if (mid < n-1 && nums[mid] < nums[mid+1]) low = mid + 1;
             else if (mid > 0 && nums[mid] < nums[mid-1]) high = mid - 1;
         }
-        
         return low;
     }
 };
